# src/routes/auth.route.ts
@@ -5,8 +5,8 @@ import { authenticate } from '../middlewares/auth.middleware';
 
 const router = express.Router();
 
-router.post('/login', authController.login);
 router.post('/register', authController.register);
+router.post('/login', authController.login);
 router.post('/check', authenticate, authController.check);
 router.post('/forgot-password', authController.forgotPassword);
 router.post('/reset-password', authenticate, authController.resetPassword);
